BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/RAD_Interaction_Detail_Rpt__c.object
<CustomObject>
    <description>This object is used for the BMS custom reports.</description>
    <fields>
        <fullName>ADP_Address_City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Address_Line1__c</fullName>
        <description>Address Line 1</description>
        <label>Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Address_Line2__c</fullName>
        <description>Address Line 2 (If available)</description>
        <inlineHelpText>Address Line 2 (If available)</inlineHelpText>
        <label>Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Address_State__c</fullName>
        <description>State</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Address_Territories__c</fullName>
        <description>The territories of this address</description>
        <label>Affected Territories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Address_Zip__c</fullName>
        <description>Zip</description>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_BPA_ID__c</fullName>
        <description>BPA ID</description>
        <label>BPA ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Customer_Name__c</fullName>
        <description>Customer Name</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Customer_Type__c</fullName>
        <description>Customer Type</description>
        <label>Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Delete_Date__c</fullName>
        <description>Date when the record is deleted</description>
        <label>Delete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADP_Delete_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>False when created. True when the record is deleted</description>
        <label>Delete Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADP_Flagged_For_Delete_Date__c</fullName>
        <description>When the record is flagged for delete</description>
        <label>Flagged For Delete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADP_MERGE_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if deleted by Merge Process</description>
        <label>Deleted by Merge Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADP_Master_Id__c</fullName>
        <description>Customer Master ID</description>
        <label>Master Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_User_Business_Unit__c</fullName>
        <description>the Business Unit of the user who flagged the address for delete</description>
        <label>User  Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_User_Salesforce_Name__c</fullName>
        <description>Salesforce name of the user who flagged the address for delete</description>
        <label>User Salesforce Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_User_Territories__c</fullName>
        <description>The territory number of the user who flagged address  for delete</description>
        <label>User Territories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_User_Who_Flagged__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Name of the User who flagged addresses for Delete</description>
        <label>User Who Flagged</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALL_COUNT__c</fullName>
        <label>ALL_COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALL_PERCENTAGE__c</fullName>
        <label>ALL PERCENTAGE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALL_TOTAL__c</fullName>
        <label>ALL_TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANSWER__c</fullName>
        <label>ANSWER</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Influence_ONC_Assigned_HCP__c</fullName>
        <formula>IF( Access_influence_Assigned_HCP__c ,&apos;YES&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Influence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_influence_Assigned_HCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Local_Influence__c</fullName>
        <label>Account Local Influence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Name_Assigned_HCP__c</fullName>
        <description>This field contains the account name for the Assigned HCP and My List Frequency MSL reports</description>
        <label>Account_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Name of the account</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_National_Influence__c</fullName>
        <label>Account National Influence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Regional_Influence__c</fullName>
        <label>Account Regional Influence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Valuation__c</fullName>
        <label>Account Valuation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Attendees_Names__c</fullName>
        <label>Additional Attendees Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_Assigned_HCP__c</fullName>
        <description>This field contains the address line for accounts; to be used in Assigned HCP and My List Frequency Reports</description>
        <label>Address_Line_1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Address_Line1__c</fullName>
        <description>Address Line 1</description>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Address_Line2__c</fullName>
        <description>Address Line 2</description>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Alignment__c</fullName>
        <description>Account Territory Intelligent Name</description>
        <label>Alignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_BP_ID__c</fullName>
        <description>Account BP ID</description>
        <label>BP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Child_Alignment__c</fullName>
        <description>Child Account Territory Intelligent Name</description>
        <label>Child Alignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Child_BP_ID__c</fullName>
        <description>Child Account BP ID</description>
        <label>Child BP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Child_Name__c</fullName>
        <description>Child Account Name</description>
        <label>Child Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Child_Type__c</fullName>
        <description>Child Account Type</description>
        <label>Child Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Name__c</fullName>
        <description>Account Name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Parent_BP_ID__c</fullName>
        <description>Parent Account BP ID</description>
        <label>Parent BP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Parent_Name__c</fullName>
        <description>Parent Account Name</description>
        <label>Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Parent_Type__c</fullName>
        <description>Parent Account Type</description>
        <label>Parent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Sales_Force_Name__c</fullName>
        <description>Sales Force Name</description>
        <label>Sales Force Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Therapeutic_Area__c</fullName>
        <description>Therapeutic Area</description>
        <label>Therapeutic Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Type__c</fullName>
        <description>Account Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Zip__c</fullName>
        <description>Zip</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_name__c</fullName>
        <description>Contains name of other attendees</description>
        <inlineHelpText>Contains name of other attendees</inlineHelpText>
        <label>Attendee_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_KMB__c</fullName>
        <description>This value will contain &quot;Yes&quot; if the KMB for the Interaction is checked and will be blank if the KMB is unchecked.</description>
        <label>BMS_KMB</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPA_ID__c</fullName>
        <label>BPA ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_ID_Assigned_HCP__c</fullName>
        <description>Master ID of the customer for the Assigned HCP and My List Frequency MSL reports</description>
        <label>BP_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_ID__c</fullName>
        <description>Master ID of the customer</description>
        <label>BP ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date_Time__c</fullName>
        <label>Call Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Plan_Status__c</fullName>
        <label>Call Plan Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Assigned_HCP__c</fullName>
        <description>This field contains the city name for accounts; to be used in Assigned HCP and My List Frequency reports</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Protocol_Number__c</fullName>
        <label>Clinical Trial Protocol Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Support_Assigned_HCP__c</fullName>
        <description>This field contains the Clinical Trial Support for an account; to be used in Assigned HCP and My List Frequency reports</description>
        <label>Clinical Trial Support</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Support__c</fullName>
        <label>Clinical Trial Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disease_State_Proactive_Deck_Name__c</fullName>
        <label>Disease State Proactive Deck Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Assigned_HCP__c</fullName>
        <description>This field contains the emails for accounts; to be used in Assigned HCP and My List Frequency MSL reports</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_Assigned_HCP__c</fullName>
        <description>This field contains the fax numbers of accounts; to be used in Assigned HCP and My List Frequency MSL Reports</description>
        <label>Fax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Payer_Government_Advocacy__c</fullName>
        <label>For Payer Government Advocacy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Discussion__c</fullName>
        <description>Interaction Discussion: Interaction Discussion</description>
        <inlineHelpText>Interaction Discussion: Interaction Discussion</inlineHelpText>
        <label>Interaction Discussion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Intent__c</fullName>
        <label>Interaction Intent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Name__c</fullName>
        <label>Interaction Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Sub_Type__c</fullName>
        <label>Interaction Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Topic__c</fullName>
        <label>Interaction Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date_My_List_Visit_Freq__c</fullName>
        <description>This field will be used in My List Visit Frequency report</description>
        <label>Last_Activity_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_State_Assigned_HCP__c</fullName>
        <description>This field contains the license state of the account; to be used in Assigned HCP and My List Frequency reports</description>
        <label>License State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Influence_Assigned_HCP__c</fullName>
        <description>This is the new field which will be added to Assigned HCP reports. This will denote the local influence of the HCP.</description>
        <label>Local Influence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSL_Full_Name_Assigned_HCP__c</fullName>
        <description>This field contains the full name of the MSL</description>
        <label>MSL_Full_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSL</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Group__c</fullName>
        <label>Main Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Strategy_Assigned_HCP__c</fullName>
        <description>This field contains the Medical Strategy for an account; to be used in Assigned HCP and My List Frequency reports</description>
        <label>Medical Strategy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Strategy__c</fullName>
        <label>Medical Strategy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NO_TIER_COUNT__c</fullName>
        <label>NO_TIER_COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_TIER_PERCENTAGE__c</fullName>
        <label>NO_TIER_PERCENTAGE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NO_TIER_TOTAL__c</fullName>
        <label>NO_TIER_TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Influence_Assigned_HCP__c</fullName>
        <description>This is the new field which will be added to Assigned HCP reports. This will denote the national influence of the HCP</description>
        <label>National Influence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Affiliated_Address_Line_1__c</fullName>
        <description>Address Line 1 for accounts which are aligned but not affiliated</description>
        <label>Non Affiliated Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Affiliated_Address_Line_2__c</fullName>
        <description>Address Line 2 for accounts which are aligned but not affiliated</description>
        <label>Non Affiliated Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Affiliated_City__c</fullName>
        <description>Contains the city name for accounts which are aligned and not affiliated</description>
        <label>Non Affiliated City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Affiliated_SF_Name__c</fullName>
        <description>Contains the sales force name of the accounts which are aligned and not affiliated</description>
        <label>Non Affiliated SF Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Affiliated_State__c</fullName>
        <description>Contains state for addresses related to accounts which are aligned and not affiliated</description>
        <label>Non Affiliated State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Affiliated_Zip__c</fullName>
        <description>Contains zip code of addresses associated with accounts which are aligned and not affiliated</description>
        <label>Non Affiliated Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Affiliation_Therapeutic_Area__c</fullName>
        <description>Contains the therapeutic area of the accounts which are aligned and not affiliated</description>
        <label>Non Affiliation Therapeutic Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_MSL_Field_days__c</fullName>
        <label>Non-MSL Field days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Sphere_of_Influence_Assigned_HCP__c</fullName>
        <description>This field contains the Overall Sphere of Influence of an account; to be used in Assigned HCP and My List Frequency MSL reports</description>
        <label>Overall Sphere of Influence</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Sphere_of_Influence__c</fullName>
        <label>Overall Sphere of Influence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Government_Advocacy_Assigned_HCP__c</fullName>
        <description>This field contains the Payer/ Government/ Advocacy of an account; to be used in Assigned HCP and My List Frequency report</description>
        <label>Payer/ Government/ Advocacy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Assigned_HCP__c</fullName>
        <description>This field contains phone numbers for accounts; to be used in Assigned HCP and My List Frequency MSL reports</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Parent_Assigned_HCP__c</fullName>
        <description>This field contains the primary parent name of the account; to be used in Assigned HCP and My List Frequency reports</description>
        <label>Primary Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Presentation_Proactive_Deck_Name__c</fullName>
        <label>Product Presentation Proactive Deck Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Selection_Order__c</fullName>
        <label>Product Selection Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professional_Designation_Assigned_HCP__c</fullName>
        <description>This field contains the professional designation of an account; to be used in Assigned HCP and My List Frequency reports</description>
        <label>Professional Designation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RAD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF((CreatedBy.Profile.Name=&quot;BMS-SPEC11-MGR-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC11-REP-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC12-MGR-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC12-REP-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC13-MGR-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC13-REP-MSL&quot;),&quot;PR&quot;,&quot;US&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Influence_Assigned_HCP__c</fullName>
        <description>This is the new field which will be added to Assigned HCP reports. This will denote the regional influence of the HCP</description>
        <label>Regional Influence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Training_Proactive_Deck_Name__c</fullName>
        <label>Speaker Training Proactive Deck Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Assigned_HCP__c</fullName>
        <description>This field contains the specialty of an account; to be used in Assigned HCP and My List Frequency reports</description>
        <label>Specialty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Assigned_HCP__c</fullName>
        <description>This field contains the state name for accounts; to be used in Assigned HCP and My List Frequency reports</description>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA__c</fullName>
        <formula>IF( Owner:User.TA_BMS_SHARED__c = &apos;&apos;, &apos;N/A&apos;, Owner:User.TA_BMS_SHARED__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIER1_COUNT__c</fullName>
        <label>TIER1_COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIER1_PERCENTAGE__c</fullName>
        <label>TIER1_PERCENTAGE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TIER1_TOTAL__c</fullName>
        <label>TIER1_TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIER2_COUNT__c</fullName>
        <label>TIER2_COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIER2_PERCENTAGE__c</fullName>
        <label>TIER2_PERCENTAGE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TIER2_TOTAL__c</fullName>
        <label>TIER2_TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIER3_COUNT__c</fullName>
        <label>TIER3_COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIER3_PERCENTAGE__c</fullName>
        <label>TIER3_PERCENTAGE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TIER3_TOTAL__c</fullName>
        <label>TIER3_TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_My_List_Visit_Freq__c</fullName>
        <description>This field will be used in the My List Visit Frequency report</description>
        <label>Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Assigned_HCP__c</fullName>
        <description>This field contains the therapeutic area of the MSL for the Assigned HCP and My List Frequency MSL reports</description>
        <label>Therapeutic_Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_BMS__c</fullName>
        <label>Therapeutic Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <description>This field contains the therapeutic area of the MSL for the Assigned HCP and My List Frequency MSL reports</description>
        <label>Therapeutic_Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_with_MSL__c</fullName>
        <label>Time with MSL</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Field_Days__c</fullName>
        <label>Total Field Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_MSL_Field_Days__c</fullName>
        <label>Total MSL Field Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Visits__c</fullName>
        <label>Total Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_QTR__c</fullName>
        <label>1st Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_Qtr__c</fullName>
        <label>2nd Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Qtr__c</fullName>
        <label>3rd Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4th_Qtr__c</fullName>
        <label>4th Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Activity_My_List_Visit__c</fullName>
        <description>This field will be used in My List Visit Frequency report</description>
        <label>YTD_Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_Assigned_HCP__c</fullName>
        <description>This field contains the zip code for accounts; to be used in the Assigned HCP and My List Frequency MSL reports</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Report</label>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports</pluralLabel>
    <recordTypes>
        <fullName>Account_Affiliation</fullName>
        <active>true</active>
        <description>Account-Affiliation</description>
        <label>Account-Affiliation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Non_Affiliation</fullName>
        <active>true</active>
        <description>For the report which will display aligned but non affiliated accounts</description>
        <label>Account - Non Affiliation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Address_Flagged_For_Delete</fullName>
        <active>true</active>
        <description>Addresses which are flagged for Delete</description>
        <label>Address - Flagged For Delete</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assigned_HCP</fullName>
        <active>true</active>
        <description>A new record type for Assigned HCP MSL report</description>
        <label>Assigned_HCP</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCI_SE_SUMMARY</fullName>
        <active>true</active>
        <label>DCI SE SUMMARY</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Account</fullName>
        <active>true</active>
        <description>Group Account</description>
        <label>Group Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interaction_Detail</fullName>
        <active>true</active>
        <label>Interaction Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>My_List_Visit_Frequency</fullName>
        <active>true</active>
        <description>A new record type for My List Frequency MSL report</description>
        <label>My List Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>RAD_Field_Activity</fullName>
        <active>true</active>
        <label>RAD Field Activity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>